--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,15 @@ packages = [
 python = "^3.6"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.1.2"
+pytest-cov = "^2.10.1"
+
+[tool.pytest.ini_options]
+addopts = "--cov=timeslot"
+testpaths = [
+    "src",
+    "tests",
+]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
